2003-09-04  Per Bothner  <per@bothner.com>

	* BRL.java (getLexer, parseFile):  Change defaultCallConvention
	to new CALL_WITH_CONSUMER.

2003-05-31  Per Bothner  <per@bothner.com>

	* BRL.java (getOutputConsumer):  Update parameter type.

2003-01-09  Per Bothner  <per@bothner.com>

	* BRL.java (emptyForm):  New static.field.
	(parseFile):  Use emptyForm instead of toString().length().
	* BRLReaderString.java (read):  If empty, return emptyForm.

2002-11-05  Per Bothner  <per@bothner.com>

	* BRL.java (parseFile): Take and use new 'immediate' parameter.

2002-07-24  Per Bothner  <per@bothner.com>

	* BRL.java (parseFile):  Update to new Interpreter API.

2002-03-02  Per Bothner  <per@bothner.com>

	* BRL.java (parseFile):  Now throws IOException and SyntaxException.

	* BRL.java (<init>):  HTTP module moved to slib package.

2002-02-14  Per Bothner  <per@bothner.com>

	* BRL.java (<init>):  Update path to progfun in loadClass argument.

2002-02-13  Per Bothner  <per@bothner.com>

	* progfun.scm:  Moved from gnu.brl.
	* Makefile.am: Update accordingly.

2002-01-31  Per Bothner  <per@bothner.com>

	* BRL (<init>):  Also do loadClass of gnu.kawa.servlet.HTTP.

2002-01-29  Per Bothner  <per@bothner.com>

	Support two languages "krl" (experimental) and "brl" (BRL-compatible).
	* BRL.java (getInstance):  Now take a 'compatible' flag.
	(getKrlInstance, getBrlInstance):  New static methods.
	(brlCompatible):  New field.
	(isBrlCompatible, setBrlCompatible):  New methods.
	(getLexer, parseFile):  Set lexer's compatible flag according to ours.
	(getOutputConsumer):  If compatible emit standard Scheme output.
	(makeBody):  If compatible, return standard BeginExp.
	* BRLRead.java (brlCompatible):  New field.
	(isBrlCompatible, setBrlCompatible):  New methods.
	(readObject):  If compatible, ]string[ is read as a regular <string>.
	* BRLReaderString.java (read):  Ditto.

	* BRL.java (<init>):  Load stringfun and progfun standard modules.
