@@ -1,3 +1,7 @@
+2003-10-19  Per Bothner  <per@bothner.com>
+
+	* LispInterpreter.java (parse, parseFile):  Pass this to Translator.
+
 2003-10-02  Per Bothner  <per@bothner.com>
 
 	* LangPrimType.java (byteType, shortType, intType, longType, floatType,
