@@ -1,3 +1,7 @@
+2003-10-19  Per Bothner  <per@bothner.com>
+
+	* XSLT.java (parseXPath, parse, parseFile):  Pass this to Compilation.
+
 2003-09-04  Per Bothner  <per@bothner.com>
 
 	* XSLT.java (parse, parseFile):  Change defaultCallConvention
